update: model and report

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -77,4 +77,48 @@ abstract = {Reverse-time stochastic diffusion equation models are defined and it
   urldate      = {2025-12-13}
 }
 
+@misc{guo2024patterns,
+      title={Quantum Circuit Ansatz: Patterns of Abstraction and Reuse of Quantum Algorithm Design}, 
+      author={Xiaoyu Guo and Takahiro Muta and Jianjun Zhao},
+      year={2024},
+      eprint={2405.05021},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE},
+      url={https://arxiv.org/abs/2405.05021}, 
+}
 
+@article{Vatan_2004,
+   title={Optimal quantum circuits for general two-qubit gates},
+   volume={69},
+   ISSN={1094-1622},
+   url={http://dx.doi.org/10.1103/PhysRevA.69.032315},
+   DOI={10.1103/physreva.69.032315},
+   number={3},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)},
+   author={Vatan, Farrokh and Williams, Colin},
+   year={2004},
+   month=mar }
+
+@misc{lin2026quantumsuperresolutionadaptivenonlocal,
+      title={Quantum Super-resolution by Adaptive Non-local Observables}, 
+      author={Hsin-Yi Lin and Huan-Hsin Tseng and Samuel Yen-Chi Chen and Shinjae Yoo},
+      year={2026},
+      eprint={2601.14433},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2601.14433}, 
+}
+
+@article{Sim_2019,
+   title={Expressibility and Entangling Capability of Parameterized Quantum Circuits for Hybrid Quantum‐Classical Algorithms},
+   volume={2},
+   ISSN={2511-9044},
+   url={http://dx.doi.org/10.1002/qute.201900070},
+   DOI={10.1002/qute.201900070},
+   number={12},
+   journal={Advanced Quantum Technologies},
+   publisher={Wiley},
+   author={Sim, Sukin and Johnson, Peter D. and Aspuru‐Guzik, Alán},
+   year={2019},
+   month=oct }
